src/tess/tl/test/pass/test_malloc_free.tl
#module main
#import <cstdlib.tl>

main() {
    p: Ptr[Void] := c_malloc(64zu)
    c_free(p)
    0
}
