src/tess/tl/test/fail/test_fail_reserved_type_tu.tl
#module main

TU[T]: | Some { x: T }
       | any { bad: T }

main() { 0 }
